se finaliza la fase inicial

--- a/mippes/src/main/resources/application.properties
+++ b/mippes/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=801
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/consultamipres
+spring.datasource.username=root
+spring.datasource.password=10904025
+
+#mipres.nit.ips=555555196
+#mipres.token=TOKEN_PROV
+mipres.nit.ips=900453139
+mipres.token=CF1A6D8A-D905-4C98-85C7-1F645C5926D0
+mipres.sede=PROV002203
+#mipres.base.url=https://tablas.sispro.gov.co/WSSUMMIPRESNOPBS/api/
+mipres.base.url=https://wsmipres.sispro.gov.co/WSSUMMIPRESNOPBS/api/
