--- a/mippes/src/main/resources/application.properties
+++ b/mippes/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-server.port=801
+server.port=8090
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/consultamipres
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/transcolombia?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=10904025
+spring.datasource.password=root
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+ 
 
 #mipres.nit.ips=555555196
 #mipres.token=TOKEN_PROV
